@@ -32,6 +32,7 @@ Release 3.1-1.1 Start 26/12/2024 End XX/XX/XXXX
 16. debian/Makefile: added Debian 13
 17. surblfilter.c, dns.c, dns_text.c: renamed getshort to get_short to fix OSX
     compilation error
+18. read_assign.c: fixed dlen datatype and datatype passed to scan_uint
 
 * Tue Dec 24 2024 20:28:14 +0000 Manvendra Bhangui <indimail-mta@indimail.org 3.0.9-1.1%{?dist}
 Release 3.0.9-1.1 Start 08/08/2024 End 24/12/2024
